--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"webpack"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^3.5.5"
+    "css-loader": "^0.28.5",
+    "csv-loader": "^2.1.1",
+    "file-loader": "^0.11.2",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.5",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.4"
